Se ha agregado un tiempo para que se cierre la sesión automaticamente, se agregaron alertas si el se hizo correctamente el registro, modificación o eliminación

--- a/frontend/css/estilospdf.css
+++ b/frontend/css/estilospdf.css
@@ -1,15 +1,15 @@
 /* Tablas de los PDF */
 
 .head {
-	background-color: #012E57;
-	color: #ffffff;
+	background-color: #ffffff;
+	color: #000000;
 	border: none;
 }
 
 .footer {
 	font-size: 15px;
-	background-color: #003C6B;
-	color: #ffffff;
+	background-color: #ffffff;
+	color: #000000;
 	border: none;
 }
 
