Respaldo para los PDF y cambio de libreria de DomPDF

--- a/frontend/css/estilospdf.css
+++ b/frontend/css/estilospdf.css
@@ -1,46 +1,1 @@
-/* Tablas de los PDF */
-
-.head {
-	background-color: #ffffff;
-	color: #000000;
-	border: none;
-}
-
-.footer {
-	font-size: 15px;
-	background-color: #ffffff;
-	color: #000000;
-	border: none;
-}
-
-table {
-	width: 100%;
-	text-align: center;
-	border-collapse: collapse;
-}
-
-th {
-	font-size: 20px;
-}
-
-td {
-	font-size: 15px;
-}
-
-th,
-td {
-	border: 1px solid black;
-	padding: 7px;
-}
-
-.nada {
-	border: none;
-	padding: 15px;
-}
-
-.espacio {
-	border: none;
-	padding: 7px;
-}
-
-/* ----------------- */
+.head{background-color:#fff;color:#000;border:none}.footer{font-size:15px;background-color:#fff;color:#000;border:none}table{width:100%;text-align:center;border-collapse:collapse}th{font-size:20px}td{font-size:15px}td,th{border:1px solid #000;padding:7px}.nada{border:none;padding:15px}.espacio{border:none;padding:7px}
