Agregado limites de fecha de nacimiento, validacion de pedidos, ocultar y mostrar contraseña

--- a/frontend/css/estilos.css
+++ b/frontend/css/estilos.css
@@ -61,3 +61,14 @@ body {
 }
 
 /* ------- */
+
+/* Centrado */
+
+.abs-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+/* ------- */
